--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@
   to = "/index.html"
   status = 200
   force = false
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    access-control-allow-origin = "*"
